# generator

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
.kiro/settings/: mcp.json
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/backup/backup_1754918248569/: backup-meta.json
.promptx/memory/rust-expert/: declarative.dpml
.promptx/resource/: project.registry.json
.promptx/resource/role/git-manager/: git-manager.role.md
.promptx/resource/role/git-manager/execution/: git-commit-process.execution.md
.promptx/resource/role/git-manager/thought/: git-workflow.thought.md
.promptx/resource/role/rust-expert/: rust-expert.role.md
.promptx/resource/role/rust-expert/execution/: rust-development.execution.md
.promptx/resource/role/rust-expert/thought/: rust-expertise.thought.md
config/: template_registries.json  templates.json
docs/: API.md  RUST_ARCHITECTURE_PROMPT.md  project-redesign.md
examples/: test-napi.js
resources/java-cli/: README.md
src/: cli.rs  error.rs  java_cli.rs  lib.rs  main.rs  template_registry.rs  templates.rs  utils.rs
templates/java/basic/: README.md
templates/react/basic/: README.md
templates/vue/basic/: README.md  template.json
