[package]
name = "generator"
version = "0.0.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A unified CLI tool for generating Java, Vue.js, and React projects using napi-rs"
license = "MIT"
repository = "https://github.com/yourusername/project-generator"
keywords = ["java", "vue", "react", "cli", "generator", "template", "napi"]
categories = ["command-line-utilities", "development-tools"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2"
handlebars = "4.0"
git2 = "0.20.2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3.8"
